minor fixes to spacing on about page

--- a/src/styles/about-card.css
+++ b/src/styles/about-card.css
@@ -9,7 +9,7 @@
     flex-direction: column;
     gap: 21px;
     align-items: flex-start;
-    width: 100%;
+    width: 400px;
     max-width: 500px;
   }
   
